@@ -362,6 +362,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<mainClass>com.app.ModulithApplication</mainClass>
+					<jvmArguments>-Duser.timezone=Asia/Kolkata -XX:+UseZGC -XX:+ZGenerational -Xmx2g -Xms512m --add-modules jdk.incubator.vector</jvmArguments>
 				</configuration>
 			</plugin>
 		</plugins>
